[package]
name = "my"
version = "0.0.20"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "my minimalist X11 window manager"
readme = "README.md"
homepage = "https://github.com/yuulive/my"
repository = "https://github.com/yuulive/my"
keywords = ["wm", "x11", "terminal"]
categories = ["GUI"]

[dependencies]
regex = "1.3"
[dependencies.xcb]
version = "0.9"
features = ["randr"]
